# ChangeLog for dev-ruby/rubygems-ee
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Dec 2008; Alex Legler <gentoo@a3li.info>
  +files/rubygems-ee-1.3.1-gentoo.patch,
  +files/rubygems-ee-1.3.1-proxy.patch, +files/10rubygems,
  +files/rubygems-ee-1.3.1-setup.patch, +files/auto_gem.rb,
  +files/conf.d-gem_server, +files/init.d-gem_server2,
  +rubygems-ee-1.3.1.ebuild:
  Initial ebuild, taken from the original rubygems, changes by a3li
