@@ -6,5 +6,7 @@ AUX rubygems-ee-1.3.1-gentoo.patch 1914 RMD160 9668808eb50ac0e96265d8756d6751f62
 AUX rubygems-ee-1.3.1-proxy.patch 480 RMD160 4a782791fa29525473a6ec9de91885606c0c85e7 SHA1 8cea4f1a918c8df68581955ceaf07502de8310dc SHA256 ac7d7012910041395e8855169d36cb9fba81ba060b7f1f404e03041d5e5e7634
 AUX rubygems-ee-1.3.1-setup.patch 1534 RMD160 e253b5bf4b21a79e67bd4809cb0decad87240a77 SHA1 15dcec952759233a257dfb825df4ad05fac24e26 SHA256 a95b44921346f82384a5799cc92e2a4a8abde8e6073693349eb3c28d928c09c5
 DIST rubygems-1.3.1.tgz 263748 RMD160 898f33bf49ac6d29d8980cb4feaf30ade0125248 SHA1 a21ae466146bffb28ece05cddbdced0b908ca74f SHA256 361f02e9e3bf1b6625f0e2146553b12c3003d36336cacba51410740f544a8d3b
-EBUILD rubygems-ee-1.3.1.ebuild 2816 RMD160 c306a543ca49d606a7afec5ffa9a3c8ca19d0679 SHA1 de1e48db68295045f08e6c25683adcf5278eeced SHA256 c5180e88bd861d93e23702b25da7ac3a39f49298722ee36a50ec4ef9df2d0888
-MISC ChangeLog 480 RMD160 26d0fb8ac76a1b6091dce812de75b78b566497dc SHA1 b1e7228341d4c08471ce9d3984410ce6cd519cd7 SHA256 1dc760d3428833456a65933ec2c9ca1aa3fe56af3cc61d941fac01556c10729d
+DIST rubygems-1.3.4.tgz 293275 RMD160 451797299921cac9997fc93a85601d6f28f17cf5 SHA1 b973b4748c0bc08f9a62b3312bde935dda2eac6f SHA256 1eb4b0a24ed589c40c2b2c3583bd39c52e841afedd55958cc191b3e31adfbbfc
+EBUILD rubygems-ee-1.3.1.ebuild 2883 RMD160 e1dd902a98f60fefa50f54741dd5ec63afac5e44 SHA1 d0fa84554adad876f235407c4f4e49b83e5fa82e SHA256 254a3764382ac6e11663aa1a7cc20d61dacf8b7bdaab5f7ef57d0b1cdfe7fe18
+EBUILD rubygems-ee-1.3.4.ebuild 2616 RMD160 0842abbefbee284d79a0dfeb7bc477785e0f37e0 SHA1 9cead58ab3fedbfd95af95a0b398cf532aefd024 SHA256 db5c20e274b19828e74349464831d62e29afe0515fd07c9f9afe0d786e1fa943
+MISC ChangeLog 613 RMD160 23bcc16974a2b550cf074d0107a10036f9fc8aba SHA1 4253c1c05debd5f4cfac81267ecd4a6a37fb9085 SHA256 18689a6d19bb1a2dfeadcadbafd0e8ab705cdf24580d5aaa635bef03b9577ed4
