@@ -27,17 +27,6 @@ PDEPEND="server? ( dev-ruby/builder )" # index_gem_repository.rb
 
 USE_RUBY="ruby18"
 
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
-
-	epatch "${FILESDIR}/${P}-setup.patch"
-	epatch "${FILESDIR}/${P}-proxy.patch"
-	# Fixes a new "feature" that would prevent us from recognizing installed
-	# gems inside the sandbox
-	epatch "${FILESDIR}/${P}-gentoo.patch"
-}
-
 src_compile() {
 	# Allowing ruby_src_compile would be bad with the new setup.rb
 	:
@@ -69,7 +58,7 @@ src_install() {
 	${RUBY} setup.rb $myconf --prefix="${D}" || die "setup.rb install failed"
 
 	dosym gemee /usr/bin/gem || die "dosym gem failed"
-	dodoc README ChangeLog TODO || die "dodoc README failed"
+	dodoc README ChangeLog || die "dodoc README failed"
 
 	cp "${FILESDIR}/auto_gem.rb" "${D}"/$(${RUBY} -r rbconfig -e 'print Config::CONFIG["sitedir"]') || die "cp auto_gem.rb failed"
 	if [ ! -e /etc/env.d/10rubygems ] ; then
