@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/rubygems-ee
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  30 Jun 2009; Lance Albertson <ramereth@gentoo.org> ChangeLog:
+  Version bump
+   * Remove old patches as they are no longer needed
 
   10 Dec 2008; Alex Legler <gentoo@a3li.info>
   +files/rubygems-ee-1.3.1-gentoo.patch,
